css/style.css
:root {

    --colour-bg: #e5e9ec;
    --colour-text: #777;
    --colour-text-secondary: rgb(238, 228, 208);
    --colour-primary: #394149;
    --colour-secondary: #ffd891;
    --colour-tertiary: #333;
    --colour-accent: #F56526;


    --font-primary: colfax-web, sans-serif;
    --text-base-size: 1rem;
    --text-scale-ratio: 1.2;
    --text-xxl: 4rem;
    --text-xl: 3rem;
    --text-lg: 2rem;
    --text-md: 1.4rem;
}

/* body = tag
    .body = class
     #body = id */


html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

h1 {
    font-weight: 300;
    font-size: 1.7rem;
    margin-top: 0;
}

p {
    margin-top: 0;
    line-height: 1.5em;
}

p:last-of-type {
    margin-bottom: 0;
}


body {
    background-color: var(--colour-bg);
    color: var(--colour-text);
    font-family: var(--font-body);
    font-size: var(--text-base-size);
    font-family: var(--font-primary);
    color: var(--colour-primary);

}

.header {
    background: var(--colour-accent);
    text-align: center;
    position: fixed;
    z-index: 999;
    width: 100%;
}


img {
    max-width: 100%;
    height: auto;
}

.container {
    width: 95%;
    max-width: 70em;
    margin: 0 auto;
}

.title {
    font-size: 1.5rem;
}

.title span {
    font-weight: 300;
    display: block;
    font-size: 1.5em;
    margin: 0em 0em 0.5em 0.1em;
}

@media (min-width: 60rem) {

    p {
        font-size: 1.2rem;
        line-height: 1.6;
    }


    .title {
        font-size: 2.7rem;
    }

}



.nav-toggle {
    display: none;

}


.nav-toggle-label {
    position: absolute;
    top: 0;
    left: 0;
    margin-left: 1em;
    height: 100%;
    display: flex;
    align-items: center;
}

.nav-toggle-label span,
.nav-toggle-label span::before,
.nav-toggle-label span::after {
    display: block;
    background-color: white;
    height: 2px;
    width: 2em;
    border-radius: 2px;
    position: relative;
}

.nav-toggle-label span::before,
.nav-toggle-label span::after {
    content: '';
    position: absolute;
}


.nav-toggle-label span::before {
    bottom: 7px;
}

.nav-toggle-label span::after {
    top: 7px;
}


.nav {
    position: absolute;
    text-align: left;
    top: 100%;
    left: 0;
    background-color: var(--colour-accent);
    width: 100%;
    transform: scale(1, 0);
    transform-origin: top;
    transition: transform 400ms ease-in-out;
}

.nav ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.nav li {
    margin-bottom: 1em;
    margin-left: 1em;
}

.nav a {
    color: white;
    text-decoration: none;
    font-size: 1.2rem;
    text-transform: uppercase;
    opacity: 0;
    transition: opacity 150ms ease-in-out;
}

.nav a:hover {
    color: #000;
}

.nav-toggle:checked~nav {
    transform: scale(1, 1);
}

.nav-toggle:checked~nav a {
    opacity: 1;
    transition: opacity 250ms ease-in-out 250ms;
}


@media screen and (min-width: 800px) {
    .nav-toggle-label {
        display: none;
    }

    header {
        display: grid;
        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
    }


    .logo {
        height: 100%;
        grid-column: 2 / 3;
    }

    .logo img {
        width: 100%;
        height: 100%;
    }

    .nav {
        all: unset;
        position: relative;
        text-align: left;
        transition: none;
        transform: scale(1, 1);
        background: none;
        top: initial;
        left: initial;
        grid-column: 3 / 4;
        display: flex;
        justify-content: flex-end;
        align-items: center;

    }


    .nav ul {
        display: flex;
    }

    .nav li {
        margin-left: 3em;
        margin-bottom: 0;
    }

    .nav a {
        opacity: 1;
        position: relative;
    }

    .nav a::before {
        content: '';
        display: block;
        height: 5px;
        background: black;
        position: absolute;
        top: -.75em;
        left: 0;
        right: 0;
        transform: scale(0, 1);
        /* transform-origin: left; */
        transition: transform ease-in-out 250ms;
    }

    .nav a:hover::before {
        transform: scale(1, 1);
    }

}


.product-layout {
    display: flex;
    gap: 2rem;
    flex-wrap: wrap;
    padding: 1em;
}


.product-card {
    padding: 1.5rem;
    justify-self: center;
    width: 18rem;
    flex-direction: column;
    background-color: #ffffff;
    display: flex;
    flex-wrap: nowrap;
    /* flex: 0 1; */
    gap: 2rem;

}

.product-card a {
    width: 100%;
    height: 100%;
    font-weight: bold;
    color: rgb(42, 67, 175);
    font-size: 2em;
}


.product-card a img {
    width: 100%;
    max-width: 30em;
}

.product-card .product-description {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    gap: 1rem;
}


#trackInfo ul {
    padding: 0px;
    list-style-type: none;

}

.album-about {
    font-size: 1em;
    padding-top: 1em;
}

.product-header {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    font-size: 2em;
    font-weight: bold;

}

#add-to-cart-product-page {
    padding-top: 1em;
    padding-bottom: 1em;
}


.main-footer {
    display: flex;
    flex-wrap: wrap;
    justify-content: right;
    align-items: center;
    background-color: #ffd86e;
    padding: .25em 0;
}

.main-footer-container {
    display: flex;
    align-items: center;
}

.main-footer-container ul {
    flex-grow: 1;
    text-align: start;
}

.footer-nav li {
    padding: 0 .5em;
}


/* Form fills: Styling the text input */

input,
textarea,
select {
    width: 20em;
    padding: 0.90em;
    border-radius: 0.2em;
    border: 1px rgb(170, 170, 170) solid;
    background-color: white;
    vertical-align: middle;
}


.textInput {
    padding: 0.75rem 1rem;
    border-radius: 0.5rem;
    font-size: 0.9rem;
}


form {
    margin: auto;
    width: 15em;
    display: inline-flexbox;
    grid-template-columns: 200px 1fr;
}

label {
    display: block;
    margin-top: 0;
}

#secure-icon {
    width: 5em;
    height: 5em;
}
/* ... */

